--- a/test/integration-tests/test-server/signin.html
+++ b/test/integration-tests/test-server/signin.html
@@ -6,9 +6,24 @@
 <body>
   <h1>Mock sign in page</h1>
   <p>Everything is controlled via JS. Otherwise, we be testing our own test code which is silly (e.g. filling out our own forms).</p>
+  <a id="js-link" href="#">JavaScript controlled sign in link</a>
   <script>
-    window.signInToTeam = function (teamName) {
-      window.location = window.location + '/../team.html?' + encodeURIComponent(teamName);
+    var linkEl = document.getElementById('js-link');
+    window.signInToTeam = function (teamName, options) {
+      window.signInToTeams([teamName], options);
+    };
+    // DEV: Sign into the first team as the active one with all others as inactive
+    // This removes the need for maintaining state and mockk Slack (effectively testing our tests)
+    window.signInToTeams = function (teamNames, options) {
+      options = options || {};
+      var file = 'team.html?' + encodeURIComponent(teamNames.join(','));
+      if (options.useLink) {
+        // DEV: We use a link/click to emulate potentially clicking a "Switch" link in Slack
+        linkEl.href = file;
+        linkEl.click();
+      } else {
+        window.location = window.location + '/../' + file;
+      }
     };
   </script>
 </body>
